<resources>
    <string name="app_name">Tale Adventure</string>
    <string name="preference_file_name">PREFERENCE_FILE</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="category_age_title">아이의 나이대를 골라주세요</string>
    <string name="age_3_to_4">3세 ~ 4세</string>
    <string name="age_5_to_6">5세 ~ 6세</string>
    <string name="age_7_to_8">7세 ~ 8세</string>
    <string name="age_9_to_10">9세 ~ 10세</string>
    <string name="app_logo">앱 로고</string>
    <string name="cd_category_indicator_first">카테고리 첫 번째 페이지</string>
    <string name="cd_category_indicator_second">카테고리 두 번째 페이지</string>
    <string name="next">다음</string>
    <string name="category_genre_title">좋아하는 장르를 골라주세요</string>
    <string name="category_genre_desc">중복 선택 가능</string>
    <string name="complete">카테고리 설정 완료!</string>
    <string name="did_user_set_category">did user set category</string>
</resources>