<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.view.HomeFragment">

    <ImageView
        android:id="@+id/iv_category_age_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/category_indicator_first"
        android:src="@drawable/ic_category_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_category_age_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:text="@string/category_age_title"
        android:textAppearance="@style/M20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_category_age_indicator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_category_age_first_category"
        style="@style/Theme.TaleAdventure.AgeCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="76dp"
        android:layout_marginTop="25dp"
        android:text="@string/age_3_to_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_age_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_category_age_second_category"
        style="@style/Theme.TaleAdventure.AgeCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="76dp"
        android:layout_marginTop="15dp"
        android:text="@string/age_5_to_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_category_age_first_category" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_category_age_third_category"
        style="@style/Theme.TaleAdventure.AgeCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="76dp"
        android:layout_marginTop="15dp"
        android:text="@string/age_7_to_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_category_age_second_category" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_category_age_fourth_category"
        style="@style/Theme.TaleAdventure.AgeCategoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="76dp"
        android:layout_marginTop="15dp"
        android:text="@string/age_9_to_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_category_age_third_category" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_category_age_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_radius_30_change_solid"
        android:enabled="false"
        android:paddingVertical="10dp"
        android:text="@string/next"
        android:textAppearance="@style/Sb16"
        android:textColor="@color/black_000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_category_age_fourth_category" />
</androidx.constraintlayout.widget.ConstraintLayout>